examples/test/testpolicy14441.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14441
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key25: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value32
          key26: value3
          key48: value31
      podSelector:
        matchLabels:
          key13: value42
          key33: value21
